--- a/styles/global.css
+++ b/styles/global.css
@@ -32,6 +32,7 @@ a:hover {
 }
 
 .header {
+  display: flex;
   margin-bottom: 1em;
   padding: 1em;
   background:#000;
@@ -42,6 +43,21 @@ header a {
   font-size: 1.5em;
   font-weight: bold;
   color: #fff;
+}
+
+#social {
+  margin: 0 0 0 1em;
+  padding: 0;
+  list-style: none
+}
+
+#social li {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+#social img {
+  vertical-align: middle;
 }
 
 .backToHome {
