--- a/styles/global.css
+++ b/styles/global.css
@@ -65,6 +65,13 @@ header a {
 }
 
 
+.intro {
+  margin-bottom: 0;
+  font-size: 1.2em;
+  text-align: center;
+}
+
+
 img {
   display: block;
   margin: 0 auto;
